WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225662
Failing sandbox check for media permissions should not generate a violation report
https://bugs.webkit.org/show_bug.cgi?id=225662
Summary
Failing sandbox check for media permissions should not generate a violation r...
Ben Nham
Reported
2021-05-11 11:04:15 PDT
Failing sandbox check for media permissions should not generate a violation report
Attachments
Patch
(1.85 KB, patch)
2021-05-11 11:09 PDT
,
Ben Nham
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.88 KB, patch)
2021-05-11 12:25 PDT
,
Ben Nham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2021-05-11 11:09:28 PDT
Created
attachment 428295
[details]
Patch
Ben Nham
Comment 2
2021-05-11 11:11:25 PDT
<
rdar://77460058
>
Ben Nham
Comment 3
2021-05-11 12:25:40 PDT
Created
attachment 428304
[details]
Patch
Radar WebKit Bug Importer
Comment 4
2021-05-11 12:25:52 PDT
<
rdar://problem/77856069
>
Geoffrey Garen
Comment 5
2021-05-11 12:36:14 PDT
Comment on
attachment 428304
[details]
Patch r=me
EWS
Comment 6
2021-05-11 13:45:26 PDT
Committed
r277338
(
237597@main
): <
https://commits.webkit.org/237597@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428304
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug