Failing sandbox check for media permissions should not generate a violation report https://bugs.webkit.org/show_bug.cgi?id=225662

Reviewed by Geoffrey Garen.

We sandbox_check the UIProcess for camera and video permissions. But if the process doesn't
have those permissions, sandbox_check fails and generates an expensive violation report that
task_suspends the process. We need to suppress the reporting with SANDBOX_CHECK_NO_REPORT.

* UIProcess/Cocoa/MediaPermissionUtilities.mm:
(WebKit::checkSandboxRequirementForType):


Canonical link: https://commits.webkit.org/237597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277338 268f45cc-cd09-0410-ab3c-d52691b4dbfc